Project

General

Profile

Actions

Bug #50520

closed

slow radosgw-admin startup when large value of rgw_gc_max_objs configured

Added by Mark Kogan about 3 years ago. Updated about 1 year ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
% Done:

100%

Source:
Support
Tags:
gc backport_processed
Backport:
octopus pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

on a test setup, each increment by thousand of rgw_gc_max_objs
increases the radosgw-admin command execution time by 1.2 sec:

for example:

time ./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=32 user list
                                                 ^^^^^^^^^^^^^^^^^^^^
[
    "56789abcdef0123456789abcdef0123456789abcdef0123456789abcdef01234",
    "testx$9876543210abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
    "cosbench00",
    "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
    "test",
    "cosbench01",
    "cosbench03",
    "testid",
    "cosbench04",
    "cosbench02",
    "cosbench05" 
]
./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=32 user list  0.17s user 0.03s system 77% cpu 0.258 total
                                                                                                            ^^^^^^^^^^^

time ./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=1009 user list
...
./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=1009 user list  0.37s user 0.06s system 33% cpu 1.270 total

time ./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=2003 user list
...
./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=2003 user list  0.60s user 0.10s system 29% cpu 2.408 total

time ./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=3001 user list
...
./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=3001 user list  0.79s user 0.14s system 26% cpu 3.435 total

time ./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=4001 user list
...
./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=4001 user list  1.05s user 0.17s system 26% cpu 4.677 total

time ./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=5003 user list
[
    "56789abcdef0123456789abcdef0123456789abcdef0123456789abcdef01234",
    "testx$9876543210abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
    "cosbench00",
    "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
    "test",
    "cosbench01",
    "cosbench03",
    "testid",
    "cosbench04",
    "cosbench02",
    "cosbench05" 
]
./bin/radosgw-admin -n client.rgw.silvertip --rgw_gc_max_objs=5003 user list  1.22s user 0.20s system 25% cpu 5.640 total
#                                                                                                             ^^^^^^^^^^^


Related issues 3 (0 open3 closed)

Has duplicate rgw - Bug #48983: radosgw not working - upgraded from mimic to octopusDuplicate

Actions
Copied to rgw - Backport #50802: octopus: slow radosgw-admin startup when large value of rgw_gc_max_objs configuredResolvedCory SnyderActions
Copied to rgw - Backport #50803: pacific: slow radosgw-admin startup when large value of rgw_gc_max_objs configuredResolvedCory SnyderActions
Actions #1

Updated by Mark Kogan about 3 years ago

  • Pull request ID set to 41027
Actions #2

Updated by Casey Bodley about 3 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Casey Bodley about 3 years ago

  • Has duplicate Bug #48983: radosgw not working - upgraded from mimic to octopus added
Actions #4

Updated by Casey Bodley almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Tags set to gc
  • Backport set to octopus pacific
Actions #5

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #50802: octopus: slow radosgw-admin startup when large value of rgw_gc_max_objs configured added
Actions #6

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #50803: pacific: slow radosgw-admin startup when large value of rgw_gc_max_objs configured added
Actions #7

Updated by Backport Bot over 1 year ago

  • Tags changed from gc to gc backport_processed
Actions #8

Updated by Konstantin Shalygin about 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF