radosgw-admin: skip GC init on read-only admin ops

Fixes: https://tracker.ceph.com/issues/50520

Signed-off-by: Mark Kogan <mkogan@redhat.com>
(cherry picked from commit 9ac1991fc798af7e0ba0fac18209b71b5ae3f02b)

Conflicts:
	src/rgw/rgw_admin.cc
	src/rgw/rgw_rados.h
	src/rgw/rgw_sal.cc
	src/rgw/rgw_sal.h

Cherry-pick notes:
- src/rgw/rgw_admin.cc: conflicts due to differences in op lists
- src/rgw/rgw_rados.h: conflicts due to changes to unrelated  method signatures
- src/rgw/rgw_sal.cc: conflicts due to octopus missing a couple of methods from later releases
- src/rgw/rgw_sal.h: conflicts due to changes to unrelated method seignatures
- src/rgw/rgw_rados.cc: use of ldpp_dout vs. ldout